Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 </code></pre>
 
 <ul>
-<li>paper: [CVPR] <a href="http://doi.org/10.2197/ipsjtcva.8.11">Journal</a>
+<li>paper: <a href="takahashi12new.pdf">CVPR</a> <a href="http://doi.org/10.2197/ipsjtcva.8.11">Journal</a>
 </li>
-<li>movie:</li>
+<li>movie: <a href="takahashi12new.mp4">mp4</a>
+</li>
 <li>bibtex:</li>
 </ul>
 
