--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
     <meta charset="UTF-8">
     <title>Mirror-based Camera Pose Estimation Using an Orthogonality Constraint by computer-vision</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
