--- a/index.html
+++ b/index.html
@@ -48,9 +48,19 @@
 }
 </code></pre>
 
-<p>The motivation of this project is to calibrate a camera w.r.t. a reference object which is not observable from the camera. This happens, for example, in display-camera systems such as digital signage, webcam attached to laptop PC, etc. Once obtained the mapping between the display pixel coordinate system and the camera coordinate system, it becomes possible to compute the gazing point (pixel) of a person in front of the display by estimating the gazing direction in the camera coordinate system. This scenario allows the person to move freely, while conventional methods typically restrict the head position to be fixed.</p>
+<p>The motivation of this project is to calibrate a camera w.r.t. a reference object which is not observable from the camera. This happens, for example, in display-camera systems such
+as digital signage, webcam attached to laptop PC, etc. Once obtained the mapping between the display pixel coordinate system and the camera coordinate system, it becomes possible to
+ compute the gazing point (pixel) of a person in front of the display by estimating the gazing direction in the camera coordinate system. This scenario allows the person to move fre
+ely, while conventional methods typically restrict the head position to be fixed.</p>
 
-<p>The key point to solve the problem is the use of mirrored images. Suppose we have a single static camera CC and a static reference object $$X$$ as shown below. The camera CC cannot observe the reference object XX directly. Instead, we use a mirror ππ and let the camera CC observe the reference object XX through it. The goal of our mirror-based calibration is to estimate the relative posture RR and position TT of the camera CC against the reference object XX by observing three points of XX via three mirrors πj(j=1,2,3)πj(j=1,2,3) under different unknown positions and orientations.</p>
+<p>The key point to solve the problem is the use of mirrored images.
+Suppose we have a single static camera (C) and a static reference object (X) as shown below.
+The camera (C) cannot observe the reference object (X) directly.
+Instead, we use a mirror (\pi) and let the camera (C) observe the reference object (X) through it.
+The goal of our mirror-based calibration is to estimate the relative posture (R) and position (T) of the camera (C) against the reference object (X) by observing three point
+s of (X) via three mirrors (\pi_j (j=1,2,3)) under different unknown positions and orientations.</p>
+
+<p><img src="overview.png" alt="Overview"></p>
 
 <h1>
 <a id="source-code" class="anchor" href="#source-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Source code</h1>
@@ -168,6 +178,199 @@ d3 =
 
 <h3>
 <a id="tnmm--top-level-driver" class="anchor" href="#tnmm--top-level-driver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><code>tnm.m</code> : top-level driver</h3>
+
+<p>The figure below illustrates the measurement model of our method.</p>
+
+<p><img src="geometry.png" alt="Geometry"></p>
+
+<p>In this figure, we use the following notations. Notice that ({}^Yx) denotes (x) in (Y) coordinate system.</p>
+
+<ul>
+<li>(C) : camera.</li>
+<li>(\pi_j (j=1,2,3)) : three mirrors.</li>
+<li>({}^Cn_j (j=1,2,3)) : the normal vector of (\pi_j).</li>
+<li>(d_j (j=1,2,3)) : the distance from (C) to (\pi_j).</li>
+<li>({}^Xp^i (i=1,2,3)) : three reference points in the reference object coordinate system.</li>
+<li>({}^Cp^i (i=1,2,3)) : ({}^Xp^i) in the camera (C) coordinate system.</li>
+<li>({}^Cp^i_j (i,j=1,2,3)) : Reflection of ({}^Xp^i) by (\pi_j) in the camera (C) coordinate system.</li>
+<li>(q^i_j (i,j=1,2,3)) : 2D projection of ({}^Cp^i_j) in the camera (C) image screen.</li>
+</ul>
+
+<p>The goal is to estimate the relative rotation (R) and translation (T) between the camera (C) and the reference (X) which satisfy</p>
+
+<blockquote>
+<p>({}^Cp^i = R \cdot {}^Xp^i + T (i=1,2,3) ). (1)</p>
+</blockquote>
+
+<p>by knowing (q^i_j (i,j=1,2,3)), the projections of ({}^Xp^i) observed via three different mirrors (\pi_j (j=1,2,3)) of unknown positions. The orientation and the position of t
+he mirrors (the distances from the camera to the mirrors) are also estimated as a result.
+So the input / output of the above-mentioned "tnm.m" can be expressed as follows.</p>
+
+<ul>
+<li>tnm.m
+** Input|(q^i_j (i,j=1,2,3)) : 2D projections of three reference points observed via three mirrors (\pi_j (j=1,2,3)).
+** Output|(R, T) : The relative posture and position between the camera (C) and the reference (X).~
+({}^Cn_j, d_j (j=1,2,3)) : The orientations and distances of the three mirrors (\pi_j (j=1,2,3)).</li>
+</ul>
+
+<h3>
+<a id="sub-functions" class="anchor" href="#sub-functions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sub-functions</h3>
+
+<p>Our mirror-based calibration method consists of the following three steps, and we provide implementations corresponding to them.
+1. <code>sub_p3p.m</code>: P3P per mirrored image.
+** Input:
+*** ({}^Xp^i (i=1,2,3)) : Three reference points, and
+*** (q^i (i)) : their projections observed via a mirror (\pi).
+** Output: Up to 4 possible solutions of ({}^Cp^i)
+2. <code>sub_tnm_orth.m</code>: Unique solution selection using an orthogonality constraint.
+** Input: 64 sets of ({}^Cp^i_j (i,j=1,2,3)).
+** Output: The set of ({}^Cp^i_j (i,j=1,2,3)) which follows the orthogonality constraint best.
+3. <code>sub_tnm_rt.m</code>: Linear estimation of (R) and (T).
+** Input: ({}^Cp^i_j (i,j=1,2,3)).
+** Output: (R, T, n_j, d_j (j=1,2,3)).</p>
+
+<p>And in addition, we use the following sub-function for evaluation purpose.</p>
+
+<ul>
+<li>
+<code>sub_reproj.m</code>: Reprojection error evaluation
+** Input:
+*** ({}^Xp^i (i=1,\dots)) : Any number of reference points.
+*** (q^i_j (i=1,\dots, j=1,2,3)) : The projections of the reference points via mirrors.
+*** (R, T, n_j, d_j (j=1,2,3)) : Estimated parameters.
+** Output: Average reprojection error.</li>
+</ul>
+
+<h1>
+<a id="how-to-use-the-opencv-version-with-sample-data" class="anchor" href="#how-to-use-the-opencv-version-with-sample-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to use the OpenCV version with sample data</h1>
+
+<h2>
+<a id="usage-1" class="anchor" href="#usage-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
+
+<p>After unzipping the downloaded file, you will have the following files in a single directory named <code>./tnm-opencv</code>.</p>
+
+<ul>
+<li>
+<code>data/input{1,2,3}.png</code> : Three input images. They are the original pictures WITH lens distortions.</li>
+<li>
+<code>data/input{1,2,3}.txt</code> : Three input data points extracted from input{1,2,3}.png. The points are taken from undistorted images.</li>
+<li>
+<code>Makefile</code> : makefile.</li>
+<li>
+<code>demo.cc</code> : A demo program to run our method.</li>
+<li>
+<code>sub_solveP3P.h</code> : A sub-function called from tnm.h to solve P3P problem.</li>
+<li>
+<code>tnm.h</code> : An implementation of our calibration method.</li>
+</ul>
+
+<p>This code requires OpenCV 2.3. We used libcv-dev package in <a href="http://packages.debian.org/en/wheezy/libcv-dev">Debian wheezy</a>. For Debian/Ubuntu, try</p>
+
+<pre><code> $ sudo apt-get -f install libcv-dev libcvaux-dev libhighgui-dev g++ make
+``
+to install requisite libraries and compilation tools, and then exec
+</code></pre>
+
+<p>$ make</p>
+
+<pre><code>to compile the code.
+
+For Visual C++ on Windows, please simply import `demo.cc`, `sub_solveP3P.h`, and `tnm.h` into a new project, and compile it (you need to setup additional include path and libraries for Op
+enCV, of course).
+
+Once compiled, run the binary (named `demo`) with no args in the `./tnm-opencv` directory.
+</code></pre>
+
+<p>$ ./demo
+ loading 'data/input1.txt' = [263.854279, 284.595978;
+   380.608337, 284.673645;
+   261.375946, 355.315582]</p>
+
+<p>loading 'data/input2.txt' = [187.462204, 264.845764;
+   302.664276, 261.313538;
+   183.416656, 338.876984]</p>
+
+<p>loading 'data/input3.txt' = [393.80719, 301.828278;
+   529.568542, 311.569794;
+   391.23999, 374.259766]</p>
+
+<p>loading 'data/model.txt' = [0, 0, 0;
+   175, 0, 0;
+   0, 100, 0]</p>
+
+<p>loading 'data/camera.txt' = [487.910797, 0, 324.31308;
+   0, 487.558441, 237.003937;
+   0, 0, 1]</p>
+
+<p>Average reprojection error by TNM : 0.353531 pixels</p>
+
+<p>==== Parameters by TNM ====</p>
+
+<p>R  = [0.9552278293542109, -0.0315692738655991, -0.2941822138995512;
+   0.02622804982091903, 0.9994120031779081, -0.02208477544627536;
+   0.294706436016986, 0.01338016634873504, 0.9554941589139341]</p>
+
+<p>T  = [71.67155976406129; 84.34036742140127; 120.2696306131992]</p>
+
+<p>n1 = [0.2679446927390354; 0.03066392138399924; -0.9629461903753189]</p>
+
+<p>n2 = [0.4356434955333516; 0.08437398428883026; -0.8961561111629551]</p>
+
+<p>n3 = [-0.04427539436835728; -0.01119106464381498; -0.9989566805050478]</p>
+
+<p>d1 = 386.23</p>
+
+<p>d2 = 355.048</p>
+
+<p>d3 = 404.707</p>
+
+<pre><code>
+This program automatically loads data from `data/input{1,2,3}.txt`, and then outputs the estimated parameters to stdout.
+
+## Brief descriptions of the code
+
+The structure of the code is very straightforward. Please visit the `main()` function in `demo.cc` first. The flow of `main()` is:
+1. load data from files (`model.txt`, `input{1,2,3}.txt`) by `load()` function defined in `demo.cc`.
+2. run calibration by `tnm()` function defined in tnm.h. What this function does inside is:
+2.1. call `sub_solveP3P()` defined in `sub_solveP3P.h` for each input data (= the Matlab function in `tnm-matlab/sub_p3p.m`),
+2.2. call `sub_tnm_orth()` defined in `tnm.h` (= the Matlab function in `tnm-matlab/sub_tnm_orth.m`), and
+2.3. call `sub_tnm_rt()` defined in `tnm.h` (= the Matlab function in `tnm-matlab/sub_tnm_rt.m`).
+3. run `sub_reproj()` defined in `demo.cc` to evaluate the reprojection error (= the Matlab function in `tnm-matlab/sub_reproj.m`).
+
+So to re-use the code for your own project, copy `tnm.h` and `sub_solveP3P.h`, and then use `tnm()` for calibration. To understand how to prepare the data, please consult the `load()` f
+unction in `demo.cc`.
+
+# How to use the code with your own data
+
+To calibrate your own system, please follow the process below. In short, update `data/model.txt` and `data/input{1,2,3}.txt`, then run the program again.
+1. Suppose you have a reference object \(X\) and a camera \(C\).
+1.1. The intrinsic parameters of \(C\) should be provided. You can use OpenCV to estimate them.
+2. Capture three images of \(X\) as \(I_1, I_2, I_3\) via mirrors \(\pi_1, \pi_2, \pi_3\) under different poses.
+3. Detect three points of \(X\) for each of the images (\(I_1, I_2, I_3\)).
+3.1. Here we assume that the images are rectified (undistorted) using the intrinsic parameters before the detection.
+3.2. If you used a chessboard pattern as \(X\) and used OpenCV [findChessboardCorners()](http://docs.opencv.org/modules/calib3d/doc/camera_calibration_and_3d_reconstruction.html#findch
+essboardcorners) to detect it in \(I_1, I_2, I_3\) automatically, you need to **flip** the detection result because the detector does not account for the observation via mirror.
+4. Store the data into `data/model.txt` and `data/input{1,2,3}.txt`.
+4.1. `data/model.txt` is a line-oriented plain text file each of lines represents the 3D position of a reference point in \(X\).
+</code></pre>
+
+<p>0.000000 0.000000 0.000000
+ 175.000000 0.000000 0.000000
+ 0.000000 100.000000 0.000000</p>
+
+<pre><code>4.2. `data/input{1,2,3}.txt` are also line-oriented plain text files, and each of lines represents the 2D projection of the corresponding 3D reference point in `data/model.txt`. For examp
+le, the first line below is the projection of the first reference point \((0,0,0)\) defined in the first line of `data/model.txt`.
+</code></pre>
+
+<p>380.608337 284.673645
+ 263.854279 284.595978
+ 377.368225 350.688141</p>
+
+<pre><code>5. Exec the demo program again, and you will get the result.
+
+# Contact
+* [Shohei NOBUHARA](http://vision.kuee.kyoto-u.ac.jp/~nob/)
+</code></pre>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/computer-vision/takahashi2012cvpr">Mirror-based Camera Pose Estimation Using an Orthogonality Constraint</a> is maintained by <a href="https://github.com/computer-vision">computer-vision</a>.</span>
