--- a/index.html
+++ b/index.html
@@ -452,5 +452,13 @@ le, the first line below is the projection of the first reference point $$(0,0,0
 <ul>
 <li><a href="http://vision.kuee.kyoto-u.ac.jp/%7Enob/">Shohei NOBUHARA</a></li>
 </ul>
+
+      <footer class="site-footer">
+        <span class="site-footer-owner">Kosuke Takahashi, Shohei Nobuhara, Takashi Matsuyama: A New Mirror-based Extrinsic Camera Calibration Using an Orthogonality Constraint, CVPR2012</span>
+
+        <span class="site-footer-credits">Copyright &copy; 2012 - Kyoto University</span>
+      </footer>
+
+    </section>
   </body>
 </html>
