--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </code></pre>
 
 <ul>
-<li>paper: <a href="takahashi12new.pdf">CVPR</a> <a href="http://doi.org/10.2197/ipsjtcva.8.11">Journal</a>
+<li>paper: <a href="takahashi12new.pdf">CVPR</a>, <a href="http://doi.org/10.2197/ipsjtcva.8.11">IPSJ Trans. on CVA</a>
 </li>
 <li>movie: <a href="takahashi12new.mp4">mp4</a>
 </li>
