--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 <h2 id="download-links">Download links</h2>
 <p>If you use this software, please consider citing the aforementioned paper in any resulting publication.</p>
-<h3 id="ver1-cvpr-3-points-3-mirrors-version">Ver.1 (CVPR, 3-points / 3-mirrors version) [OBSOLETE / NOT MAINTAINED ANYMORE]</h3>
+<h3 id="ver1-cvpr-3-points-3-mirrors-version">[OBSOLETE / NOT MAINTAINED ANYMORE] Ver.1 (CVPR, 3-points / 3-mirrors version)</h3>
 <ul>
 <li>Matlab version with test data: <a href="./tnm-matlab-v1.zip">tnm-matlab-v1.zip</a> (tested with Matlab 2011b and 2012a. Also compatible with GNU Octave v3.6 + Octave-Forge)</li>
 <li>OpenCV version with test data: <a href="./tnm-opencv-v1.zip">tnm-opencv-v1.zip</a> (tested with Debian wheezy + libcv-dev package)</li>
