--- a/v1/index.html
+++ b/v1/index.html
@@ -125,7 +125,9 @@
 </div></div>
             <div class="col-md-9" role="main">
 
-<h1 id="caution">V1 is OBSOLETE and  NOT MAINTAINED ANYMORE. Please use v2 instead.</h1>
+<h1 id="caution">Ver.1 is OBSOLETE and NOT MAINTAINED ANYMORE. Please use ver.2 instead.</h1>
+
+<hr>
 
 <h1 id="introduction">Introduction</h1>
 <p>This page explains how to use the 3-points version. For the general n-pts version, see <code>matlab/demo.m</code> in <a href="https://github.com/computer-vision/takahashi2012cvpr">GitHub</a>.</p>
